--- a/src/components/movie/Movies.module.scss
+++ b/src/components/movie/Movies.module.scss
@@ -1,8 +1,29 @@
 .movie__container {
+    position: relative;
+    display: flex;
     color: white;
     background-color: black;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: 90%;
+    background-size: 75%;
     background-position: top;
+    z-index: 1;
+
+    &::after {
+        position: absolute;
+        content: '';
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 1) 99%);
+    }
+}
+
+.movie__info {
+    display: flex;
+    flex-direction: column;
+    max-width: 30%;
+    margin-left: 50px;
 }
