--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+@font-face {
+  font-family: 'BebasNeue-Regular';
+  src: local('BebasNeue-Regular'), url(./fonts/bebasneue/BebasNeue-Regular.ttf) format('truetype');
+}
