trending and search results improvements

--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -5,5 +5,10 @@
 }
 
 .header__title {
+    font-family: 'BebasNeue-Regular';
+    font-size: 40px;
+    margin-right: 50px;
+    color: white;
     margin-right: 10px;
+    flex-basis: 400px;
 }
