--- a/src/components/trending/Trending.module.scss
+++ b/src/components/trending/Trending.module.scss
@@ -1,12 +1,34 @@
 .trendingItem__container {
-    background-size: cover;
+    width: 300px;
     cursor: pointer;
-    &:hover {
-        transform: scale(1.2);
-        transition: all 0.2s ease-in-out;
-    }
 }
+
+.trendingItem__imageContainer {
+    overflow: hidden;
+    position: relative;
+}
+
 .trendingItem__image {
     width: 100%;
-    visibility: hidden;
+    height: 100%;
+    transition: all 0.2s ease-in-out;
+    &:hover {
+        transform: scale(1.2);
+    }
+}
+
+.trendingItem__details {
+    position: absolute;
+    z-index: 2;
+    top: 350px;
+    padding: 12px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.tredingItem_star {
+    &::before {
+        content: '\2B50';
+    }
 }
