--- a/src/components/trending/Trending.module.scss
+++ b/src/components/trending/Trending.module.scss
@@ -1,6 +1,23 @@
+@import '../../styles/text.module.scss';
+
 .trendingItem__container {
-    width: 300px;
     cursor: pointer;
+    display: flex;
+    align-items: flex-end;
+
+    &::before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 60%;
+        z-index: 1;
+        -webkit-background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 30%, #000 90%);
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 30%, #000 90%);
+        transition: all .3s;
+        -webkit-transition: all .3s;
+    }
 }
 
 .trendingItem__imageContainer {
@@ -20,14 +37,22 @@
 .trendingItem__details {
     position: absolute;
     z-index: 2;
-    top: 350px;
     padding: 12px;
     color: white;
     display: flex;
     flex-direction: column;
 }
 
+.tredingItem__title{
+    @extend .small-title;
+}
+
+.tredingItem__rating{
+    margin-bottom: 20px;
+}
+
 .tredingItem_star {
+    margin-right: 8px;
     &::before {
         content: '\2B50';
     }
