--- a/src/styles/text.module.scss
+++ b/src/styles/text.module.scss
@@ -3,6 +3,17 @@
     font-size: 92px;
 }
 
+.small-heading {
+    font-size: 32px;
+    font-family: 'BebasNeue-Regular';
+}
+
 .small-title {
     font-size: 24px;
+}
+
+.label {
+    font-size: 16px;
+    font-family: 'BebasNeue-Regular';
+    letter-spacing: 2px;
 }
