--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -1,21 +1,41 @@
+@import '../../styles/color.module.scss';
+@import '../../styles/text.module.scss';
+
 .input {
+    @extend .label-alternate;
     -webkit-appearance: none;
-    height: 30px;
-    border-radius: 2px;
-    width: 300px;
+    height: 32px;
+    width: 700px;
+    padding: 0 12px;
+    border-radius: 4px;
+    border: solid 2px;
+    background-color: white;
+    outline: none;
+    transition: all 0.2s ease-out;
+
+    &:focus {
+        border-color: $main-blue;
+    }
 }
 .search__results {
     padding: 12px;
     display: none;
     position: absolute;
     z-index: 30;
-    background-color: gray;
+    background-color: $main-gray;
     color: white;
-    width: 500px;
-    height: 500px;
+    width: 700px;
+    max-height: 500px;
     overflow: auto;
+    top: 55px;
+    border: 2px solid $main-black;
+    border-radius: 2px;
 }
 
 .show {
     display: block;
+}
+::-webkit-scrollbar {
+    width: 0; 
+    background: transparent; 
 }
