--- a/src/styles/text.module.scss
+++ b/src/styles/text.module.scss
@@ -17,3 +17,11 @@
     font-family: 'BebasNeue-Regular';
     letter-spacing: 2px;
 }
+
+.label-alternate {
+    font-size: 16px;
+}
+
+.micro {
+    font-size: 14px;
+}
