--- a/src/components/movie/Movies.module.scss
+++ b/src/components/movie/Movies.module.scss
@@ -1,3 +1,5 @@
+@import '../../styles/color.module.scss';
+
 .movie__container {
     position: relative;
     display: flex;
@@ -6,9 +8,10 @@
     background-color: black;
     height: 100%;
     background-repeat: no-repeat;
-    background-size: 75%;
+    background-size: cover;
     background-position: top;
     z-index: 1;
+    background-attachment: fixed;
 
     &::after {
         position: absolute;
@@ -19,14 +22,17 @@
         left: 0;
         z-index: -1;
         background: radial-gradient(circle, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 1) 99%);
+        background-attachment: fixed;
+        background-size: cover;
     }
 }
 
 .movie__info {
     display: flex;
     flex-direction: column;
-    max-width: 30%;
+    max-width: 50%;
     margin-left: 50px;
+    margin-top: 20px;
 }
 
 .cast__image {
@@ -36,8 +42,32 @@
 .cast {
     display: flex;
     flex-direction: column;
+    margin-left: 50px;
+    margin-top: 50px;
 }
 
 .cast__list {
     display: flex;
+}
+.cast__item {
+    max-width: 100px;
+    margin-right: 20px;
+}
+
+.play {
+    width: 150px;
+    background: transparent;
+    fill: white;
+    opacity: 75%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: none;
+    cursor: pointer;
+    
+    &:hover {
+        fill: $main-purple;
+        transition: all .3s;
+    }
 }
