fix play button

--- a/src/components/movie/Movies.module.scss
+++ b/src/components/movie/Movies.module.scss
@@ -56,7 +56,7 @@
 
 .play {
     width: 150px;
-    background: transparent;
+    background: none;
     fill: white;
     opacity: 75%;
     position: absolute;
