--- a/src/components/movie/Movies.module.scss
+++ b/src/components/movie/Movies.module.scss
@@ -58,7 +58,7 @@
     width: 150px;
     background: none;
     fill: white;
-    opacity: 75%;
+    opacity: 0.75;
     position: absolute;
     top: 50%;
     left: 50%;
