--- a/src/styles/text.module.scss
+++ b/src/styles/text.module.scss
@@ -3,6 +3,11 @@
     font-size: 92px;
 }
 
+.tagline {
+    font-family: 'BebasNeue-Regular';
+    font-size: 32px;
+}
+
 .small-heading {
     font-size: 32px;
     font-family: 'BebasNeue-Regular';
